--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -1,10 +1,10 @@
 name: End-to-End Tests Workflow
-
 on:
   push:
-    branches:
-      - main  # Adjust this based on your branch name
-
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+# Jobs to run 
 jobs:
   tests_e2e:
     name: Run end-to-end tests
