--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -1,16 +1,52 @@
-name: End-to-End Tests Workflow
+name: End-to-End Tests
+
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-# Jobs to run 
+    branches:
+      - main
+
 jobs:
   tests_e2e:
     name: Run end-to-end tests
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+
+      - name: Install dependencies
+        run: npm i
+
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+
       - name: Run tests
+        id: run-tests
         run: npm run codeceptjs
+
+  prevent-push-on-failure:
+    name: Prevent push on test failure
+    runs-on: ubuntu-latest
+    needs: tests_e2e
+    if: ${{ needs.tests_e2e.result == 'failure' }}
+    steps:
+      - name: Set GitHub status
+        uses: actions/github-script@v4
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.sha,
+              state: 'failure',
+              target_url: 'http://localhost',  # You can customize the target URL
+              description: 'End-to-end tests failed. Push to main branch blocked.',
+              context: 'end-to-end-tests'
+            });
+
+      - name: Fail Workflow
+        run: exit 1
+
