--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -30,7 +30,7 @@ jobs:
     name: Prevent push on test failure
     runs-on: ubuntu-latest
     needs: tests_e2e
-    if: ${{ needs.tests_e2e.result == 'failure' }}
+    if: ${{ needs.tests_e2e.result == 'Error' }}
     steps:
       - name: Set GitHub status
         uses: actions/github-script@v4
