--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -28,9 +28,10 @@ jobs:
 
   prevent-push-on-failure:
     name: Prevent push on test failure
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: tests_e2e
-    if: ${{ needs.tests_e2e.result == 'Error' }}
+    if: ${{ needs.tests_e2e.result == 'failure' || needs.tests_e2e.result == 'error' }}
+
     steps:
       - name: Set GitHub status
         uses: actions/github-script@v4
@@ -42,11 +43,10 @@ jobs:
               repo: context.repo.repo,
               sha: context.sha,
               state: 'failure',
-              target_url: 'http://localhost:3000/login',  # You can customize the target URL
+              target_url: 'https://example.com',  # You can customize the target URL
               description: 'End-to-end tests failed. Push to main branch blocked.',
               context: 'end-to-end-tests'
             });
 
       - name: Fail Workflow
         run: exit 1
-
