--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -30,7 +30,7 @@ jobs:
     name: Prevent push on test failure
     runs-on: ubuntu-latest
     needs: tests_e2e
-    if: ${{ needs.tests_e2e.result == 'failure' || needs.tests_e2e.result == 'error' }}
+    if: ${{ needs.tests_e2e.result == 'FAIL' || needs.tests_e2e.result == 'Error' }}
 
     steps:
       - name: Set GitHub status
@@ -43,7 +43,6 @@ jobs:
               repo: context.repo.repo,
               sha: context.sha,
               state: 'failure',
-              target_url: 'https://example.com',  # You can customize the target URL
               description: 'End-to-end tests failed. Push to main branch blocked.',
               context: 'end-to-end-tests'
             });
