--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -30,7 +30,7 @@ jobs:
     name: Prevent push on test failure
     runs-on: ubuntu-latest
     needs: tests_e2e
-    if: ${{ needs.tests_e2e.result == 'FAIL' || needs.tests_e2e.result == 'Error' }}
+    if: ${{ needs.tests_e2e.result != 'success' }}
 
     steps:
       - name: Set GitHub status
