--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -2,22 +2,28 @@ name: End-to-End Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 
 jobs:
-  tests_e2e:
-    name: Run end-to-end tests
-    runs-on: windows-latest
+  test_code: 
+    
+    runs-on: ${{matrix.os}}
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest, macOs-latest]
+    
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
+        version: 20
 
       - name: Install dependencies
-        run: npm i
+        run: npm ci
 
       - name: Install playwright browsers
         run: npx playwright install --with-deps
@@ -25,27 +31,27 @@ jobs:
       - name: Run tests
         id: run-tests
         run: npm run codeceptjs
-
-  prevent-push-on-failure:
-    name: Prevent push on test failure
-    runs-on: ubuntu-latest
-    needs: tests_e2e
-    if: ${{ needs.tests_e2e.result != 'success' }}
-
+  
+  prevent_push_to_main_and_master:
+    
+    needs: test_code
     steps:
-      - name: Set GitHub status
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'failure',
-              description: 'End-to-end tests failed. Push to main branch blocked.',
-              context: 'end-to-end-tests'
-            });
+      run: echo "Tests failed as a test did not pass"
+  
 
-      - name: Fail Workflow
-        run: exit 1
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
