run test 1 agin

--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -9,10 +9,7 @@ on:
 jobs:
   test_code: 
     
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest, macOs-latest]
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout Repository
