--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -9,15 +9,18 @@ on:
 jobs:
   test_code: 
     
-    runs-on: ubuntu-latest
-    
+    runs-on: ${{matrix.os}}
+    strategy:
+      os: [windows-latest, ubuntu-latest, macOs-latest]
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        version: 20
+        with:
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
