--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -11,7 +11,8 @@ jobs:
     
     runs-on: ${{matrix.os}}
     strategy:
-      os: [windows-latest, ubuntu-latest, macOs-latest]
+      matrix:
+        os: [windows-latest, ubuntu-latest, macOs-latest]
 
     steps:
       - name: Checkout Repository
