--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Run tests
         id: run-tests
-        run: npm run codeceptjs
+        run: npm run codeceptjs:headless
   
 
 
