--- a/.github/workflows/tests_e2e .yml
+++ b/.github/workflows/tests_e2e .yml
@@ -2,13 +2,18 @@ name: End-to-End Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   tests_e2e:
-    name: Run end-to-end tests
-    runs-on: windows-latest
+  
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -25,27 +30,3 @@ jobs:
       - name: Run tests
         id: run-tests
         run: npm run codeceptjs
-
-  prevent-push-on-failure:
-    name: Prevent push on test failure
-    runs-on: ubuntu-latest
-    needs: tests_e2e
-    if: ${{ needs.tests_e2e.result != 'success' }}
-
-    steps:
-      - name: Set GitHub status
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            github.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.sha,
-              state: 'failure',
-              description: 'End-to-end tests failed. Push to main branch blocked.',
-              context: 'end-to-end-tests'
-            });
-
-      - name: Fail Workflow
-        run: exit 1
